--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,22 @@
 {
   "name": "hello",
+  "main": "src/worker.js",
   "compatibility_date": "2026-02-01",
-  "assets": { "directory": "./public" }
+
+  "assets": {
+    "directory": "./public",
+    "binding": "ASSETS"
+  },
+
+  "r2_buckets": [
+    { "binding": "BUCKET", "bucket_name": "postcards" }
+  ],
+
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "postcards",
+      "database_id": "297d3e93-642d-4e85-819c-f4169b1e4ea7"
+    }
+  ]
 }
